4/1/2017 1:54AM Add New budget update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".DisplayCategory"></activity>
         <activity android:name=".DisplayIncome"></activity>
+        <activity android:name=".AddBudget"></activity>
 
     </application>
 
